Bug 51577 - IDE: CRASH when Search (Ctrl F)
Summary: IDE: CRASH when Search (Ctrl F)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:3.7.0 target:3.6.0.0.beta3
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-06-29 16:09 UTC by Stephen Leibowitz
Modified: 2012-07-03 05:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Windows Error Signature (16.03 KB, image/gif)
2012-06-29 16:09 UTC, Stephen Leibowitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephen Leibowitz 2012-06-29 16:09:40 UTC
Created attachment 63624 [details]
Windows Error Signature

Problem description: 

Steps to reproduce:
1. Open a Basic macro in Calc (I used an xla file from Excel.)
2. Either search for a non-existent string or continue searching until there are no more occurrences of the string.

Current behavior: Crash. This also occurred in 3.60 Beta 1.

Platform (if different from the browser): Win XP
              
Browser: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2.28) Gecko/20120306 Firefox/3.6.28 ( .NET CLR 3.5.30729; .NET4.0C)
Comment 1 Julien Nabet 2012-06-29 22:49:55 UTC
On pc Debian x86-64, with master sources (future 3.7) updated yesterday and 3.5.4.2 (Debian Wheezy packages), I don't reproduce this problem on a brand new file.

Do you have this problem for any file ? (xla or Calc File)
Could you try again with a brand new file ?
Could you also attach the file so we can try to reproduce ?
Comment 2 Rainer Bielefeld Retired 2012-06-30 00:21:09 UTC
[REPRODUCIBLE] with Server Installation of "LibreOffice 3.6.0.0.beta2  German UI/Locale [Build-ID: f010139] on German WIN7 Home Premium (64bit) 

Steps tor reproduce:
1. Launch LibO from WIN Programs Start Center
2. Open new CALC document from LibO Start Center
3. Menu 'Tools -> Macros -> Organize Macros-> LibO Basic -> LibO(dev) Macros 
   -> Gimmicks -> Autotext -> Main' <Edit>
4. <control+f> for 'Find'
5. type "qwerty" as search string
6. downarrow icon of find bar for search downwards
   Bug: Crash

Also reproducible from Start Center or WRITER

Still [Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3985521]" (tinderbox: W2008R2@16-minimal_build, pull time 2012-06-24)

Already [Reproducible] with 
---------------------------
server-installation of Master "LOdev 3.6.0alpha1+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: bfa9061]" (tinderbox: Win-x86@6-fast, pull time 2012-06-02 23:56:11)

Works fine with
--------------
LibO 3.5.5
 
"LOdev 3.6.0alpha0+  English UI/Locale [Build ID: 9518535-d09cf17-8a74106-c695ecd-16afab (libreoffice-3-5-branch-point)]"  {Win-x86@9-Voreppe Win32 pull time 2012-02-29 04:21:51}. OS: German WIN7 Home Premium (64bit) 

WIN related?
Comment 3 Rainer Bielefeld Retired 2012-06-30 00:22:07 UTC
Modify Version due to results
Comment 4 Michael Meeks 2012-07-03 05:02:43 UTC
Hang not crash; but the hang is here (at least on Linux, for me):

#3  0xa6b94b58 in BasicIDEShell::ExecuteCurrent (this=0x8c5bce8, rReq=...)
    at /home/opt/libreoffice/master/basctl/source/basicide/basides1.cxx:230
#4  0xa6b9a58d in SfxStubBasicIDEShellExecuteCurrent (pShell=0x8c5bce8, rReq=...)
    at /home/opt/libreoffice/master/workdir/unxlngi6.pro/SdiTarget/basctl/sdi/basslots.hxx:167
#5  0xb6a1a2c2 in CallExec (rReq=..., pFunc=<optimized out>, this=0x8c5bce8) at /home/opt/libreoffice/master/sfx2/inc/sfx2/shell.hxx:199
#6  SfxDispatcher::Call_Impl (this=0x8b18228, rShell=..., rSlot=..., rReq=..., bRecord=1 '\001')
    at /home/opt/libreoffice/master/sfx2/source/control/dispatch.cxx:259
#7  0xb6a1c7b5 in SfxDispatcher::Execute (this=0x8b18228, nSlot=10502, nCall=4, pArgs=0x9395bc0, pInternalArgs=0xbfffdb04, nModi=0)
    at /home/opt/libreoffice/master/sfx2/source/control/dispatch.cxx:1028
#8  0xb6a2abf3 in SfxDispatchController_Impl::dispatch (this=0x9394d58, aURL=..., aArgs=uno::Sequence of length 3 = {...}, 
    rListener=empty uno::Reference) at /home/opt/libreoffice/master/sfx2/source/control/unoctitm.cxx:736
#9  0xb6a2b267 in SfxOfficeDispatch::dispatch (this=0x9394c78, aURL=..., aArgs=uno::Sequence of length 3 = {...})
    at /home/opt/libreoffice/master/sfx2/source/control/unoctitm.cxx:378
#10 0xb6dd63b0 in svx::impl_executeSearch (rSMgr=
    uno::Reference to {<com::sun::star::uno::XInterface> = {_vptr.XInterface = 0xb58536d8}, <No data fields>}, xFrame=
    uno::Reference to {<com::sun::star::lang::XComponent> = {<com::sun::star::uno::XInterface> = {_vptr.XInterface = 0xb7ed3b68}, <No data fields>}, <No data fields>}, lArgs=uno::Sequence of length 3 = {...})
    at /home/opt/libreoffice/master/svx/source/tbxctrls/tbunosearchcontrollers.cxx:75
#11 0xb6dd7a25 in svx::UpDownSearchToolboxController::execute (this=0x9388db0)
    at /home/opt/libreoffice/master/svx/source/tbxctrls/tbunosearchcontrollers.cxx:592
#12 0xb6872fc1 in framework::ToolBarManager::Select (this=0x9380c00)
    at /home/opt/libreoffice/master/framework/source/uielement/toolbarmanager.cxx:2063
#13 0xb5040e61 in Link::Call (this=0x92b8854, pCaller=0x92b85d8) at /home/opt/libreoffice/master/solver/unxlngi6.pro/inc/tools/link.hxx:143
#14 0xb51e0132 in ToolBox::Select (this=0x92b85d8) at /home/opt/libreoffice/master/vcl/source/window/toolbox2.cxx:525
#15 0xb51edde6 in ToolBox::ImplHandleMouseButtonUp (this=0x92b85d8, rMEvt=..., bCancel=0 '\000')
    at /home/opt/libreoffice/master/vcl/source/window/toolbox.cxx:3581
#16 0xb51ee19e in ToolBox::Tracking (this=0x92b85d8, rTEvt=...) at /home/opt/libreoffice/master/vcl/source/window/toolbox.cxx:4106
#17 0xb51f1001 in Window::EndTracking (this=0x92b85d8, nFlags=0) at /home/opt/libreoffice/master/vcl/source/window/window2.cxx:722
#18 0xb5209b1a in ImplHandleMouseEvent (pWindow=0x92a2760, nSVEvent=2, bMouseLeave=0 '\000', nX=279, nY=823, nMsgTime=2345093100, nCode=1, 
    nMode=3) at /home/opt/libreoffice/master/vcl/source/window/winproc.cxx:811
#19 0xb520b592 in ImplHandleSalMouseButtonUp (pWindow=0x92a2760, pEvent=0xbfffe34c)
    at /home/opt/libreoffice/master/vcl/source/window/winproc.cxx:2093
#20 0xb520a105 in ImplWindowFrameProc (pWindow=0x92a2760, nEvent=4, pEvent=0xbfffe34c)
    at /home/opt/libreoffice/master/vcl/source/window/winproc.cxx:2435
#21 0xb23bbe43 in SalFrame::CallCallback (this=0x9136bd0, nEvent=4, pEvent=0xbfffe34c) at /home/opt/libreoffice/master/vcl/inc/salframe.hxx:281
#22 0xb23b7f19 in GtkSalFrame::signalButton (pEvent=0x9395d10, frame=0x9136bd0)
    at /home/opt/libreoffice/master/vcl/unx/gtk/window/gtkframe.cxx:2855
#23 0xb202ea22 in _gtk_marshal_BOOLEAN__BOXED (closure=0x8b333f0, return_value=0xbfffe4d4, n_param_values=2, param_values=0x93776c0, 
    invocation_hint=0xbfffe4c0, marshal_data=0x0) at gtkmarshalers.c:86
#24 0xb1bde58c in g_closure_invoke () from /usr/lib/libgobject-2.0.so.0
#25 0xb1bf1330 in ?? () from /usr/lib/libgobject-2.0.so.0
#26 0xb1bf9f09 in g_signal_emit_valist () from /usr/lib/libgobject-2.0.so.0
#27 0xb1bfa263 in g_signal_emit () from /usr/lib/libgobject-2.0.so.0
#28 0xb2167503 in gtk_widget_event_internal (widget=0x8b33410, event=0x9395d10) at gtkwidget.c:4984
#29 0xb202cc3e in IA__gtk_propagate_event (widget=0x8b33410, event=0x9395d10) at gtkmain.c:2489
#30 0xb202cfd0 in IA__gtk_main_do_event (event=0x9395d10) at gtkmain.c:1684
#31 0xb1e95ff8 in gdk_event_dispatch (source=0x8751608, callback=0, user_data=0x0) at gdkevents-x11.c:2377
#32 0xb1b0ce2f in g_main_dispatch (context=0x8751650) at gmain.c:2425
#33 g_main_context_dispatch (context=0x8751650) at gmain.c:2995
#34 0xb1b0d560 in g_main_context_iterate (context=0x8751650, block=-1313751216, dispatch=1, self=<optimized out>) at gmain.c:3073
#35 0xb1b0d7fa in g_main_context_iteration (context=0x8751650, may_block=1) at gmain.c:3136
#36 0xb23a7453 in GtkData::Yield (this=0x872a5b8, bWait=true, bHandleAllCurrentEvents=false)
    at /home/opt/libreoffice/master/vcl/unx/gtk/app/gtkdata.cxx:583
#37 0xb23a7945 in GtkInstance::Yield (this=0x872a588, bWait=true, bHandleAllCurrentEvents=false)
    at /home/opt/libreoffice/master/vcl/unx/gtk/app/gtkinst.cxx:538
#38 0xb503647f in ImplYield (i_bWait=true, i_bAllEvents=false) at /home/opt/libreoffice/master/vcl/source/app/svapp.cxx:434
#39 0xb50341dc in Application::Yield (i_bAllEvents=false) at /home/opt/libreoffice/master/vcl/source/app/svapp.cxx:468
#40 0xb503420d in Application::Execute () at /home/opt/libreoffice/master/vcl/source/app/svapp.cxx:413
#41 0xb6b61cc0 in desktop::Desktop::Main (this=0xbfffec04) at /home/opt/libreoffice/master/desktop/source/app/app.cxx:1764
#42 0xb503a6c7 in ImplSVMain () at /home/opt/libreoffice/master/vcl/source/app/svmain.cxx:172
#43 0xb503a7fa in SVMain () at /home/opt/libreoffice/master/vcl/source/app/svmain.cxx:209
#44 0xb6b72e71 in soffice_main () at /home/opt/libreoffice/master/desktop/source/app/sofficemain.cxx:77
#45 0x0804852c in sal_main () at /home/opt/libreoffice/master/desktop/source/app/main.c:25
#46 main (argc=0, argv=0x930bb70) at /home/opt/libreoffice/master/desktop/source/app/main.c:24

Looks like an infinite loop finding windows in there.
Comment 5 Not Assigned 2012-07-03 05:13:44 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3dc420a6a3e2a47aa80f382cdd0e9c66b2fb6630

fdo#51577 - fix incremental search / buffer switching hang/crash
Comment 6 Michael Meeks 2012-07-03 05:19:34 UTC
Lovely report & reproduction instructions - thanks guys ! :-)
Comment 7 Not Assigned 2012-07-03 05:21:04 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=37c1c9c4ffff46264ba0f5a56ed11d24b9e0fabb&g=libreoffice-3-6

fdo#51577 - fix incremental search / buffer switching hang/crash


It will be available in LibreOffice 3.6.