fdo#51577 - fix incremental search / buffer switching hang/crash